// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiResourceKeyMetricStat should render KeyMetricStat 1`] = `
{
  "data": [
    {},
    {
      "name": "total_messages_sent",
      "type": "number",
      "value": 30,
      "delta": -42
    }
  ],
  "config": {
    "style": "key-metrics",
    "metrics": [
      {
        "api_resource_name": "foo",
        "name": "foo",
        "tooltip": "foo"
      },
      {
        "api_resource_name": "bar",
        "name": "bar",
        "tooltip": "bar"
      }
    ]
  },
  "meta": {
    "start_datetime": "2021-04-28T00:00:00-05:00",
    "previous_start_datetime": "2021-03-29T00:00:01-05:00",
    "end_datetime": "2021-05-27T23:59:59-05:00",
    "previous_end_datetime": "2021-04-28T00:00:00-05:00"
  },
  "loading": {
    "foo": true,
    "bar": false
  }
}
`;

exports[`MultiResourceKeyMetricStat should render KeyMetricStat with empty meta when no stats available 1`] = `
{
  "data": [
    {},
    {}
  ],
  "config": {
    "style": "key-metrics",
    "metrics": [
      {
        "api_resource_name": "foo",
        "name": "foo",
        "tooltip": "foo"
      },
      {
        "api_resource_name": "bar",
        "name": "bar",
        "tooltip": "bar"
      }
    ]
  },
  "meta": {},
  "loading": {
    "foo": true,
    "bar": true
  }
}
`;
